--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,23 @@
-version: "3.9"
-    
-services:
-  db:
-    image: mysql:5.7
-    volumes:
-      - db_data:/var/lib/mysql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: somewordpress
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
-    
-  wordpress1:
-    depends_on:
-      - db
-    image: wordpress:latest
-    volumes:
-      - wordpress_data:/var/www/html
-    ports:
-      - "8000:80"
-    restart: always
-    environment:
-      WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
-      WORDPRESS_DB_NAME: wordpress
+version: '3.1'
 
-  wordpress2:
-    depends_on:
-      - db
-    image: wordpress:latest
-    volumes:
-      - wordpress2_data:/var/www/html
+services:
+
+  adminer:
+    image: adminer
+    restart: always
     ports:
-      - "8000:80"
+      - 8080:8080
+
+  phpmyadmin:
+    image: phpmyadmin
+    restart: always
+    ports:
+      - 8080:80
+    environment:
+      - PMA_ARBITRARY=1
+
+  db:
+    image: mariadb:10.3
     restart: always
     environment:
-      WORDPRESS_DB_HOST: db
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
-      WORDPRESS_DB_NAME: wordpress
-volumes:
-  db_data: {}
-  wordpress_data: {}
-  wordpress2_data: {}
+      MYSQL_ROOT_PASSWORD: p4ssw0rd
