--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ version: '3.1'
 
 services:
 
-  adminer:
-    image: adminer
+  phpmyadmin:
+    image: phpmyadmin
     restart: always
     ports:
-      - 8080:8080
+      - 8080:80
+    environment:
+      - PMA_ARBITRARY=1
 
-  phpmyadmin:
+  phpmyadmin2:
     image: phpmyadmin
     restart: always
     ports:
